--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="window_button">窗口</string>
     <string name="home_button">主页</string>
     <string name="refresh">刷新</string>
+    <string name="url_divider">分割线</string>
+    <string name="search">搜索</string>
 </resources>
