modified:   app/proguard-rules.pro         modified:   app/src/main/AndroidManifest.xml         new file:   app/src/main/java/com/example/fuyg/androidbrowser/FavoriteHistoryActivity.java         new file:   app/src/main/java/com/example/fuyg/androidbrowser/FavoriteItemPopupWindow.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/MainActivity.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/ToolsPopupWindow.java         new file:   app/src/main/res/drawable/dialog_back.xml         modified:   app/src/main/res/layout/activity_main.xml         new file:   app/src/main/res/layout/dialog_modify.xml         new file:   app/src/main/res/layout/favorite_and_history.xml         new file:   app/src/main/res/layout/favorite_item_popup_window.xml         new file:   app/src/main/res/layout/list_item.xml         renamed:    app/src/main/res/layout/tools.xml -> app/src/main/res/layout/tools_popup_window.xml         modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="refresh">刷新</string>
     <string name="url_divider">分割线</string>
     <string name="search">搜索</string>
+    <string name="favorite">收藏</string>
+    <string name="history">历史</string>
+    <string name="modify_favorite_item">修改</string>
+    <string name="delete_favorite_item">删除</string>
+    <string name="name">标题</string>
+    <string name="blank" />
+    <string name="url">地址</string>
 </resources>
