modified:   app/src/main/java/com/example/fuyg/androidbrowser/FavoriteHistoryActivity.java         new file:   app/src/main/java/com/example/fuyg/androidbrowser/FavoriteHistoryManager.java         deleted:    app/src/main/java/com/example/fuyg/androidbrowser/FavoriteItemPopupWindow.java         deleted:    app/src/main/java/com/example/fuyg/androidbrowser/FavoriteManager.java         new file:   app/src/main/java/com/example/fuyg/androidbrowser/ListItemPopupWindow.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/MainActivity.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/database/IDatabase.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/database/SqlManager.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/database/SqlStr.java         modified:   app/src/main/res/layout/list_item.xml         modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,11 @@
     <string name="name">标题</string>
     <string name="blank" />
     <string name="url">地址</string>
+    <string name="delete_history_item">删除</string>
+    <string name="delete_history_all">全部删除</string>
+    <string name="viewImage">查看图片</string>
+    <string name="saveImage">保存图片</string>
+    <string name="drawImage">开始涂鸦</string>
+    <string name="viewPropertiesOfImage">查看属性</string>
+    <string name="shareImage">分享图片</string>
 </resources>
