modified:   app/src/main/java/com/example/fuyg/androidbrowser/FavoriteHistoryActivity.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/FavoriteHistoryManager.java         new file:   app/src/main/java/com/example/fuyg/androidbrowser/FileActivity.java         new file:   app/src/main/java/com/example/fuyg/androidbrowser/IntentCode.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/ListItemPopupWindow.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/MainActivity.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/database/IDatabase.java         modified:   app/src/main/java/com/example/fuyg/androidbrowser/database/SqlManager.java         new file:   app/src/main/java/com/example/fuyg/androidbrowser/file/FileShowManager.java         new file:   app/src/main/java/com/example/fuyg/androidbrowser/file/SortComparator.java         new file:   app/src/main/res/drawable/corner_bg.xml         new file:   app/src/main/res/drawable/folder_back.png         new file:   app/src/main/res/drawable/folder_home_back.png         new file:   app/src/main/res/drawable/folder_up_back.png         new file:   app/src/main/res/layout/dialog_save_image.xml         modified:   app/src/main/res/layout/favorite_item_popup_window.xml         new file:   app/src/main/res/layout/file_manager_activity.xml         new file:   app/src/main/res/layout/file_manager_list_item.xml         new file:   app/src/main/res/layout/list_item_file_manager.xml         modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,14 @@
     <string name="drawImage">开始涂鸦</string>
     <string name="viewPropertiesOfImage">查看属性</string>
     <string name="shareImage">分享图片</string>
+    <string name="file_name">文件名称</string>
+    <string name="save_path">保存路径</string>
+    <string name="default_path">默认路径</string>
+    <string name="file_manager_item_icon">图标</string>
+    <string name="file_manager_create_dir">新建</string>
+    <string name="file_manager_title">选择存储目录</string>
+    <string name="sure">确定</string>
+    <string name="cancel">取消</string>
+    <string name="file_manager_item_delete_folder">删除</string>
+    <string name="file_manager_item_rename_folder">重命名</string>
 </resources>
